fixed horizontal scrolling issue of footer and made it responsive

--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -221,3 +221,19 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .topbar {
+    height: 70px;
+    .container {
+      .logo-container {
+        .logo {
+          max-width: 100%;
+        }
+      }
+    }
+    .res-menu {
+      top: 70px;
+    }
+  }
+}
